# RustNNRefactoring

./: Cargo.toml
src/: lib.rs
src/Base/: mod.rs
src/Base/bodies/: base_nn.rs  base_rnn.rs  mod.rs
src/Base/interfaces/: base_nn.rs  base_rnn.rs
src/Realise/: mod.rs
src/Realise/rnn/: mod.rs
src/Realise/rnn/lstm/: defaults.rs  mod.rs
src/Realise/rnn/lstm/defaults/: base.rs  compute_block.rs  mod.rs
src/Realise/rnn/lstm/defaults/base/: mod.rs  train.rs
src/Realise/rnn/lstm/defaults/compute_block/: all_h.rs  mod.rs  one_h.rs  train_all_h.rs  train_one_h.rs
src/Utils/: activate_functions.rs  definitions_matrix.rs  mod.rs
