[package]
name = "RustNNRefactoring"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more =  { version = "2.1.1", features = ["deref", "deref_mut"] }
ndarray = "0.17.2"
ndarray-stats = "0.7.0"
num-traits = "0.2.19"

[lints.rust]
non_snake_case = "allow"
dead_code = "allow"
[lints.clippy]
needless_return = "allow"
todo = "warn"
